--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "json-loader": "^0.5.7",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.10",
